@@ -35,6 +35,29 @@ Some things to know before using:
 
 	Ps: This script works best with proper POP3 Email Servers (eg. your ISP supplied email addresses)
 
+
+4) Using the Contacts "Import" Button:
+
+   using the import button, you can import all the contacts from an address book eg. Windows Address Book.
+   The file has to be a .csv file and only contain the contact name and email address separated by a comma.
+   EG:
+      Fake Contact Name,fake@fakedomain.com
+      Fake Contact Name2,fake2@fakedomain2.com
+      Fake Contact Name3,fake3@fakedomain3.com
+   Outlook Express can export the address book to a .csv file. (Only tested, other email programs may also as well)
+   Heres how:
+   Run Outlook Express.
+   Click Addresses.
+   Click File, then Export
+   Then click "Other Address Book.."
+   Select "Text File (Comma Separated Values"
+   Choose location to save (you can access the .csv over the network from XinBox)
+   Now, important!! ONLY check the two tick boxes 1) Name  2) E-mail Address
+   Click Finish and you are done.
+   Run XinBox, browse for the .csv file you just created and click OK :-D
+   
+   
+
 That is all.
 
 Thanks.
